--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,32 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/time.png" alt="time">Время подбора: 10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/handcart.png" alt=" handcart">Бесплатная доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/messages-64.png" alt="massages">Ответим на все вопросы
+                    </div>
+                </div>
+                <button class="button button__main">
+                    заказать КОНСУЛЬТАЦИЮ
+                </button>
+                <div class="promo__link">или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+
         </div>
+
     </div>
 </body>
 
