--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
-                    <img src="icons/logo.png" alt="logo">
+                    <img src="icons/logo.png" alt="log  o">
                 </a>
                 <div class="header__official">
                     Официальный представитель
@@ -53,6 +53,38 @@
 
         </div>
 
+    </div>
+    <div class="benefits">
+        <div class="container">
+            <h2 class="benefits__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="benefits__icons">
+
+                <div class="benefits__wrapper">
+                    <div class="benefits__icon">
+                        <img src="icons/cup.png" alt="experience">
+                    </div>
+                    <div class="benefits__subheader">Делимся опытом</div>
+                    <div class="benefits__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="benefits__wrapper">
+                    <div class="benefits__icon">
+                        <img src="icons/heart.png" alt="health">
+                    </div>
+                    <div class="benefits__subheader">Заботимся о здоровье</div>
+                    <div class="benefits__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="benefits__wrapper">
+                    <div class="benefits__icon">
+                        <img src="icons/shoe.png" alt="run">
+                    </div>
+                    <div class="benefits__subheader">Учим бегать</div>
+                    <div class="benefits__text">Помогаем с обучением
+                        <br>правильной технике бега! Дружим с крупнейшей школой бега в Украине -
+                        <a href="#">I LOVE RUNNING</a>.</div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </body>
 
