--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="benefits">
         <div class="container">
-            <h2 class="benefits__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="benefits__icons">
 
                 <div class="benefits__wrapper">
@@ -86,6 +86,21 @@
             </div>
         </div>
     </div>
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br>по подбору пульсометра
+            </h2>
+            <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="phone">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
