--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
-                    <img src="icons/logo.png" alt="log  o">
+                    <img src="icons/logo.png" alt="logo">
                 </a>
                 <div class="header__official">
                     Официальный представитель
@@ -405,6 +405,11 @@
 
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__map">
+            <div class="footer__info"></div>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
